--- a/netlify.toml
+++ b/netlify.toml
@@ -5,4 +5,4 @@
 [build.environment]
   NODE_VERSION = "16.20.2"
   NPM_FLAGS = "--legacy-peer-deps"
-  YARN_ENABLED = false
+  YARN_ENABLED = "false"
