--- a/package.json
+++ b/package.json
@@ -35,28 +35,29 @@
   "dependencies": {
     "animejs": "^3.1.0",
     "babel-plugin-styled-components": "^1.10.6",
-    "gatsby": "^3.15.0",
+    "gatsby": "^5.14.6",
     "gatsby-image": "^2.2.34",
-    "gatsby-plugin-google-analytics": "^2.1.29",
-    "gatsby-plugin-manifest": "^3.15.0",
-    "gatsby-plugin-netlify": "^2.1.27",
-
-    "gatsby-plugin-react-helmet": "^4.15.0",
-    "gatsby-plugin-robots-txt": "^1.5.0",
-    "gatsby-plugin-sharp": "^3.15.0",
-    "gatsby-plugin-sitemap": "^4.11.0",
-    "gatsby-plugin-styled-components": "^4.15.0",
-    "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "^5.12.0",
-    "gatsby-remark-prismjs": "^5.12.0",
-    "gatsby-source-filesystem": "^3.15.0",
-    "gatsby-transformer-remark": "^4.12.0",
-    "gatsby-transformer-sharp": "^3.15.0",
+    "gatsby-plugin-gtag": "^1.0.13",
+    "gatsby-plugin-image": "^3.14.0",
+    "gatsby-plugin-manifest": "^5.14.0",
+    "gatsby-plugin-netlify": "^5.1.1",
+    "gatsby-plugin-react-helmet": "^6.14.0",
+    "gatsby-plugin-robots-txt": "^1.8.0",
+    "gatsby-plugin-sharp": "^5.14.0",
+    "gatsby-plugin-sitemap": "^6.14.0",
+    "gatsby-plugin-styled-components": "^6.14.0",
+    "gatsby-remark-external-links": "^0.0.4",
+    "gatsby-remark-images": "^7.14.0",
+    "gatsby-remark-prismjs": "^7.14.0",
+    "gatsby-source-filesystem": "^5.14.0",
+    "gatsby-transformer-remark": "^6.14.0",
+    "gatsby-transformer-sharp": "^5.14.0",
     "lodash": "^4.17.21",
+    "postcss": "^8.5.6",
     "prismjs": "^1.17.1",
     "prop-types": "^15.8.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-transition-group": "^4.3.0",
     "scrollreveal": "^4.0.5",
@@ -64,16 +65,16 @@
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
-    "@upstatement/eslint-config": "0.4.3",
+    "@upstatement/eslint-config": "^1.0.1",
     "@upstatement/prettier-config": "^0.3.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "gatsby-remark-code-titles": "^1.1.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.3.0",
-    "prettier": "^2.8.8"
+    "lint-staged": "^15.5.2",
+    "prettier": "^3.6.2"
   }
 }
